Fixed spacing between elements in selectDish container

--- a/select_dish.css
+++ b/select_dish.css
@@ -67,3 +67,8 @@
 .mobileNavBtn{
     float: right;
 }
+
+.card{
+    float: none;
+    margin:auto; 
+}
